attendee/service-mesh/phase1/layer1.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: layer1
    version: v1
    app.kubernetes.io/part-of: layers
    app.openshift.io/runtime: nodejs
  name: layer1-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: layer1
      version: v1
  template:
    metadata:
      labels:
        app: layer1
        version: v1
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - env:
        image: quay.io/marrober/layers:latest
        imagePullPolicy: Always
        name: layer1
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: layer1
  labels:
    app: layer1    
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: layer1
