attendee/service-mesh/phase1/gateway-layer1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: layer1-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - layer1-layers.apps.cluster-c2d5.c2d5.example.opentlc.com
