attendee/service-mesh/phase1/virtual-service-layer1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: layers
spec:
  hosts:
  - layer1-layers.apps.cluster-c2d5.c2d5.example.opentlc.com
  gateways:
  - layer1-gateway
  http:
  - match:
    - uri:
        exact: /call-layers
    - uri:
        exact: /get-info        
    - uri:
        exact: /
    route:
    - destination:
        host: layer1 
        port:
          number: 8080
